<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_id_tv"
        android:layout_marginStart="170dp"
        android:layout_marginTop="100dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:gravity="center_horizontal"
        android:hint="@string/email_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_id_tv"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:gravity="center_horizontal"
        android:hint="@string/password_hint"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp"
        android:text="@string/login_buuton_text"/>

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110sp"
        android:layout_marginTop="10sp"
        android:text="@string/register_tv_text"
        android:textColor="@android:color/background_dark"
        android:textSize="15sp" />

</LinearLayout>